RDM-10924 Refactor existing addCaseUserRoles
   [RDM-10924](https://tools.hmcts.net/jira/browse/RDM-10924)

Refactor CaseAccessOperation's addCaseUserRoles so it loads existing case
 roles upfront: ready for parallel implementation using
 RoleAssignmentService's createRoleAssignments.